--- a/Faturamento_back_end/package.json
+++ b/Faturamento_back_end/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js -f ./ormconfig.json"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli -f ./ormconfig.json"
   },
   "keywords": [],
   "author": "",
