--- a/Faturamento_back_end/package.json
+++ b/Faturamento_back_end/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^16.4.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "express": "^4.17.1",
