--- a/Faturamento_back_end/package.json
+++ b/Faturamento_back_end/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.7",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.34"
