--- a/Faturamento_back_end/package.json
+++ b/Faturamento_back_end/package.json
@@ -7,7 +7,7 @@
     "start": "node build/server.js",
     "dev": "ts-node-dev src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli -f ./ormconfig.json",
-    "postinstall": "tsc"
+    "build": "tsc --build"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
