--- a/Faturamento_back_end/package.json
+++ b/Faturamento_back_end/package.json
@@ -31,6 +31,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/pg": "^8.6.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
