--- a/Faturamento_back_end/.env
+++ b/Faturamento_back_end/.env
@@ -1,3 +1,4 @@
 DATABASE_URL = postgres://postgres:postgres@localhost:5432/faturamento
 MIGRATIONS = src/database/migrations/*.ts
 ENTITIES = src/entities/*.ts
+NODE_ENV = development
