--- a/faturamento-front-end/package.json
+++ b/faturamento-front-end/package.json
@@ -28,8 +28,8 @@
     "@types/styled-components": "^5.1.18"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
